# Master-Thesis

C++/: CMakeLists.txt
C++/src/: POCollocationSolver.cpp  POCollocationSolver.h  PeriodicOrbit.cpp  PeriodicOrbit.h  QPCollocationSolver.cpp  QPCollocationSolver.h  Solver3BP.h  Torus.cpp  Torus.h
C++/tests/: manifoldsQP.cpp  periodicOrbits.cpp  quasiPeriodic.cpp
Python/: cr3bp.py  quasi.py
